<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="256dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/header_img"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/staduim" />

        <ImageView
            android:id="@+id/chelsea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/chelsea_image"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/chelsea" />

        <ImageView
            android:id="@+id/man_u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/man_u"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toEndOf="@+id/header"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/man_u" />

        <TextView
            android:id="@+id/chelsea_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/chelsea_score"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toStartOf="@+id/dash"
            app:layout_constraintStart_toEndOf="@+id/chelsea"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/man_u_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/man_u_score"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toStartOf="@+id/man_u"
            app:layout_constraintStart_toEndOf="@+id/dash"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/dash"
            android:textColor="@android:color/white"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toStartOf="@+id/man_u"
            app:layout_constraintStart_toEndOf="@+id/chelsea"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/chelsea_yellow_card"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_yellowcard"
                    tools:ignore="VectorDrawableCompat"/>

                <ImageView
                    android:id="@+id/chelsea_red_card"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chelsea_yellow_card"
                    app:srcCompat="@drawable/ic_redcard"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/manu_yellow_card"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_yellowcard"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/manu_red_card"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/manu_yellow_card"
                    app:srcCompat="@drawable/ic_redcard"
                    tools:ignore="VectorDrawableCompat" />

                <Button
                    android:id="@+id/chelsea_goal"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_button"
                    android:drawableEnd="@drawable/ic_football_small"
                    android:drawableRight="@drawable/ic_football_small"
                    android:text="@string/chelsea_goal"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chelsea_red_card" />

                <Button
                    android:id="@+id/manu_goal"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/curved_button"
                    android:drawableEnd="@drawable/ic_football_small"
                    android:drawableRight="@drawable/ic_football_small"
                    android:text="@string/manu_goal"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/manu_red_card" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/manu_goal"
                    app:layout_constraintStart_toEndOf="@+id/chelsea_goal"
                    tools:ignore="VectorDrawableCompat"
                    app:srcCompat="@drawable/ic_football" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/reset"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/match"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/left_stats"
            android:layout_width="92dp"
            android:layout_height="98dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/l_s"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/right_stats"
            android:layout_width="92dp"
            android:layout_height="98dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/r_s"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>